--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,182 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
+%-------------------------
+% Resume in Latex
+% Author : Sourabh Bajaj
+% License : MIT
+%------------------------
+
+\documentclass[letterpaper,11pt]{article}
+
+\usepackage{latexsym}
+\usepackage[empty]{fullpage}
+\usepackage{titlesec}
+\usepackage{marvosym}
+\usepackage[usenames,dvipsnames]{color}
+\usepackage{verbatim}
+\usepackage{enumitem}
+\usepackage[pdftex]{hyperref}
+\usepackage{fancyhdr}
+
+
+\pagestyle{fancy}
+\fancyhf{} % clear all header and footer fields
+\fancyfoot{}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+
+% Adjust margins
+\addtolength{\oddsidemargin}{-0.375in}
+\addtolength{\evensidemargin}{-0.375in}
+\addtolength{\textwidth}{1in}
+\addtolength{\topmargin}{-.5in}
+\addtolength{\textheight}{1.0in}
+
+\urlstyle{same}
+
+\raggedbottom
+\raggedright
+\setlength{\tabcolsep}{0in}
+
+% Sections formatting
+\titleformat{\section}{
+  \vspace{-4pt}\scshape\raggedright\large
+}{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
+
+%-------------------------
+% Custom commands
+\newcommand{\resumeItem}[2]{
+  \item\small{
+    \textbf{#1}{: #2 \vspace{-2pt}}
+  }
+}
+
+\newcommand{\resumeItemNoBold}[1]{
+  \item\small{
+    {#1 \vspace{-2pt}}
+  }
+}
+
+\newcommand{\resumeSubheading}[4]{
+  \vspace{-1pt}\item
+    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+      \textbf{#1} & #2 \\
+      \textit{\small#3} & \textit{\small #4} \\
+    \end{tabular*}\vspace{-5pt}
+}
+
+\newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-4pt}}
+
+\renewcommand{\labelitemii}{$\circ$}
+
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=*]}
+\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
+\newcommand{\resumeItemListStart}{\begin{itemize}}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+\newcommand{\resumeItemListHeading}[1]{\textbf{#1}\vspace{-5pt}}
+
+%-------------------------------------------
+%%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{document}
-(Type your content here.)
+
+%----------HEADING-----------------
+\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
+  \textbf{\href{http://anumittal.in/}{\Large Anu Mittal}} & Email : \href{mailto:anu22mittal@gmail.com}{anu22mittal@gmail.com}\\
+  \href{http://anumittal.in/}{http://anumittal.in/} & Mobile : +91-9971193839 \\
+\end{tabular*}
+
+%-----------EXPERIENCE-----------------
+\section{Experience}
+  \resumeSubHeadingListStart
+  
+  \resumeSubheading
+      {Zomato}{Delhi, India}
+      {iOS Engineer}{April 2017 - Present}
+      \resumeItemListStart
+       \resumeItemNoBold{Added support for RTL languages and responsive design for various device sizes using Auto Layout.}
+       \resumeItemNoBold{Built the entire Table Reservation module of Zomato app and worked closely with the backend team to streamline the APIs.}
+       \resumeItemNoBold{Made the zomato consumer app offline-first using Core Data to cache restaurant pages.}
+       \resumeItemNoBold{Took initiative in setting up a simpler Git work flow to increase the team’s productivity.}
+       \resumeItemNoBold{Added user activity tracking throughout the app to analyze user behaviour.}
+       \resumeItemNoBold{Standardized internationalization of 6 languages and wrote script to automatically remove unused keys.}
+       \resumeItemNoBold{Involved in resolving crashes on Zomato consumer app, helped raise app from 98.2\% to 99.33\% crash free.}
+       \resumeItemNoBold{Part of 10+ releases, added features like hygiene rating, multiple user review, Gold UI update.}
+
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {Zomato}{Delhi, India}
+      {Software Engineer}{Oct 2016 - April 2017}
+      \resumeItemListStart
+        \resumeItem{Moderation Dashboard}
+          { Developed a ticket based moderation assignment system, used for moderating content for zomato sub-domains. Built a comment system and a photo viewer for menus. It replaced the third party ticket management system, HelpScout.}
+        \begin{itemize}
+            \item Designed a \textbf{normalized data model} to incorporate unstructured data collected from various sources
+            \item Integrated an email service in ZFB to notify the merchant about the content updates of their listing.
+        \end{itemize}
+
+        \resumeItem{ZLog}
+        {Developed ZLog (records moderators contributions) which includes generation of performance reports. The data was also used to get detailed weekly and monthly reports for moderators to perform data analytics.}
+        \resumeItem{Content Health Monitoring System}
+        {The system tracks the restaurant content validity and generates alerts for stale and invalid data.}
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {Google Summer of Code 2016}{Remote}
+      {GSoC Developer, KDE}{April 2016 - August 2016}
+      \resumeItemListStart
+        \resumeItem{LabPlot}
+          {Working on adding new plot types in LabPlot (a scientific data plotter application), namely histogram for continuous (quantitative) data and bar chart/plot for categorical data}
+      \resumeItemListEnd
+    \resumeSubheading
+        {KDE}{Remote}
+        {SoC Developer, KDE}{Dec 2014 - March 2015}
+        \resumeItemListStart
+          \resumeItem{Kalzium}
+          {Ported project Kalzium under KDE Edu (based on C++ and Qt) to Qt5 using KDE framework 5 and Kubuntu OS.}
+        \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
+
+%--------PROGRAMMING SKILLS------------
+\section{Programming Skills}
+ \resumeSubHeadingListStart
+    \resumeSubItem{Languages}
+       {Objective-C, PHP, JavaScript, Java, Python, C++, C, SQL, Qt, HTML, CSS.}
+    \resumeSubItem{Tools and Frameworks}
+       {Git, Android, MySQL, jQuery, Qt Creator, Kdevelop, XCode, KDE Framework 5.}
+ \resumeSubHeadingListEnd
+%-------------------------------------------
+
+%-----------EDUCATION-----------------
+\section{Education}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {BPIT, GGSIPU}{Delhi, India}
+      {Bachelor of Engineering in Computer Science; Agg:81.50\%}{Aug. 2012 -- July 2016}
+  \resumeSubHeadingListEnd
+
+%--------TALKS & CONFERENCES------------
+\section{Talks and Conferences}
+ \resumeSubHeadingListStart
+    \resumeSubItem{LinuxChix Meetup}
+       {Talked about origin of Linux and KDE.}\hfill{India}
+    \resumeSubItem{Akademy - Annual world summit of KDE}
+       {Conducted a two hour workshop on Qt Quick 2.}\hfill{Spain}
+    \resumeSubItem{FOSSASIA Summit 2017}
+       {Gave a talk on ‘K’oding with KDE and presented LabPlot.}\hfill{Singapore}
+    \resumeSubItem{KDE community, conf.kde.in 2016}
+       {Presented KDE project in an international conference held in Jaipur.}\hfill{India}
+ \resumeSubHeadingListEnd
+%-------------------------------------------
+
+%--------EXTRA CURRICULAR ACTIVITIES------------
+% \section{Extra Curricular Activities}
+%  \resumeSubHeadingListStart
+%     \resumeSubItem{Core member, Literary Society(BPIT) (Unanimously elected from 300+ students)}
+%       { Led a 3 tier team of 50 members to successfully organize the literary fest, Eloquence.}
+%     \resumeSubItem{Event Head, Annual Cultural Fest-Corona, BPIT, 2014 (Spearheaded a team of 10 event coordinators)}
+%       {Successfully managed the on-event activities and the entire logistics of 10+ events during Corona.}\hfill{Almeria, Spain}
+%  \resumeSubHeadingListEnd
+%-------------------------------------------
+
 \end{document}
