--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Sourabh Bajaj
-% License : MIT
+% Author : Anu Mittal
 %------------------------
 
 \documentclass[letterpaper,11pt]{article}
